fix: set minimum size to ImageCard components for avoiding text overflow

--- a/src/views/components/ImageCard/ImageCard.module.scss
+++ b/src/views/components/ImageCard/ImageCard.module.scss
@@ -7,7 +7,7 @@
 	isolation     : isolate;
 	overflow      : hidden;
 	position      : relative;
-	width         : 25vmin;
+	width         : clamp(100px, 150px, 25vmax);
 
 	button {
 		background-color : color.scale(palette.$black, $alpha : -50%);
